--- a/app/src/main/res/layout/activity_view_model.xml
+++ b/app/src/main/res/layout/activity_view_model.xml
@@ -2,10 +2,14 @@
 <layout>
 
     <data>
-        
+
         <variable
             name="viewModel"
-            type="com.mao.jetpack.ui.viewmodelfile.viewmodel.ViewModelJavaActivityViewModel" />
+            type="com.mao.jetpack.ui.viewmodelfile.viewmodel.ViewModelActivityViewModel" />
+
+        <variable
+            name="presenter"
+            type="com.mao.jetpack.ui.viewmodelfile.ViewModelActivity.Presenter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -27,14 +31,35 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
+        <EditText
+            android:id="@+id/tvTextEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@={viewModel.user.name}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvText" />
+
         <Button
             android:id="@+id/tvButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="发送"
+            android:onClick="send"
+            android:text="发送1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvLiveData" />
+            app:layout_constraintTop_toBottomOf="@+id/tvTextEdit" />
+
+        <Button
+            android:id="@+id/tvButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="@{()->presenter.onClick(viewModel)}"
+            android:text="发送2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvButton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
