--- a/app/src/main/res/layout/activity_view_model_java.xml
+++ b/app/src/main/res/layout/activity_view_model_java.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.mao.jetpack.ui.viewmodelfile.viewmodel.ViewModelJavaActivityViewModel" />
+            type="com.mao.lib_cache.viewmodel.ViewModelJavaActivityViewModel" />
 
         <!--有多少个数据源，对应的 ActivityViewModelJavaBinding 就有多少个 setViewModel-->
         <!-- <variable
