--- a/app/src/main/res/layout/activity_view_model_java_live_data.xml
+++ b/app/src/main/res/layout/activity_view_model_java_live_data.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.mao.jetpack.ui.viewmodelfile.viewmodel.ViewModelJavaLiveDataActivityViewModel" />
+            type="com.mao.lib_cache.viewmodel.ViewModelJavaLiveDataActivityViewModel" />
 
         <variable
             name="presenter"
