--- a/app/src/main/res/layout/activity_view_model_java_login.xml
+++ b/app/src/main/res/layout/activity_view_model_java_login.xml
@@ -5,11 +5,11 @@
 
         <variable
             name="viewModel"
-            type="com.mao.lib_cache.viewmodel.ViewModelActivityViewModel" />
+            type="com.mao.lib_cache.viewmodel.LoginUserViewModel" />
 
         <variable
             name="presenter"
-            type="com.mao.jetpack.ui.viewmodelfile.ViewModelActivity.Presenter" />
+            type="com.mao.jetpack.ui.viewmodelfile.ViewModelUserLoginActivity.Presenter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,39 +17,50 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="20dp"
         android:paddingTop="?attr/actionBarSize">
 
-
-        <TextView
-            android:id="@+id/tvText"
+        <ImageView
+            android:id="@+id/iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.user.name}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="50dp"
+            android:src="@mipmap/ic_launcher"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <EditText
-            android:id="@+id/tvTextEdit"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvAccount"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@={viewModel.user.name}"
+            android:text="@={viewModel.loginMutableLiveData.account}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvText" />
+            app:layout_constraintTop_toBottomOf="@+id/iv" />
+
+
+        <EditText
+            android:id="@+id/tvPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@={viewModel.loginMutableLiveData.password}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvAccount" />
+
 
         <Button
             android:id="@+id/tvButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:onClick="send"
-            android:text="发送1"
+            android:onClick="sendLogin"
+            android:text="登录1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTextEdit" />
+            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
+
 
         <Button
             android:id="@+id/tvButton2"
@@ -57,9 +68,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:onClick="@{()->presenter.onClick(viewModel)}"
-            android:text="发送2"
+            android:text="登录2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvButton" />
+
+
+        <TextView
+            android:id="@+id/tvShow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@{viewModel.loginMutableLiveData.account}"
+            android:textColor="#4fefcd"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@+id/tvButton2" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
