--- a/app/src/main/res/layout/activity_view_model.xml
+++ b/app/src/main/res/layout/activity_view_model.xml
@@ -7,6 +7,11 @@
             name="viewModel"
             type="com.mao.jetpack.ui.viewmodelfile.viewmodel.ViewModelActivityViewModel" />
 
+        <!--在代码中设置 对象也可以达到双向绑定-->
+        <variable
+            name="user"
+            type="com.mao.jetpack.ui.viewmodelfile.model.UserKotlin" />
+
         <variable
             name="presenter"
             type="com.mao.jetpack.ui.viewmodelfile.ViewModelActivity.Presenter" />
@@ -24,7 +29,7 @@
             android:id="@+id/tvText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.user.name}"
+            android:text="@{viewModel.name}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +40,7 @@
             android:id="@+id/tvTextEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@={viewModel.user.name}"
+            android:text="@={viewModel.name}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvText" />
