--- a/app/src/main/res/layout/activity_view_model.xml
+++ b/app/src/main/res/layout/activity_view_model.xml
@@ -55,7 +55,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvTextEdit" />
 
 
-        <EditText
+         <EditText
             android:id="@+id/tvTextEdit1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -63,6 +63,27 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvText1" />
+
+
+
+        <TextView
+            android:id="@+id/tvText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{user.name}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTextEdit1" />
+
+
+        <EditText
+            android:id="@+id/tvTextEdit2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@={user.name}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvText2" />
 
         <Button
             android:id="@+id/tvButton"
@@ -73,7 +94,7 @@
             android:text="发送1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTextEdit1" />
+            app:layout_constraintTop_toBottomOf="@+id/tvTextEdit2" />
 
         <Button
             android:id="@+id/tvButton2"
