约束布局 -- 居中 角度

--- a/app/src/main/res/layout/activity_constraintlayout.xml
+++ b/app/src/main/res/layout/activity_constraintlayout.xml
@@ -10,6 +10,53 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+
+            <!--
+              layout_constraintCircle  圆心
+              layout_constraintCircleRadius  半径
+              layout_constraintCircleAngle 角度
+              按照时钟，正上方顺时针
+
+            -->
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/sun"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/sun"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/earth"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/earth"
+                app:layout_constraintCircle="@id/sun"
+                app:layout_constraintCircleAngle="45"
+                app:layout_constraintCircleRadius="150dp"
+                tools:ignore="MissingConstraints" />
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/moon"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/moon"
+                app:layout_constraintCircle="@id/earth"
+                app:layout_constraintCircleAngle="270"
+                app:layout_constraintCircleRadius="40dp"
+                tools:ignore="MissingConstraints" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -42,9 +89,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:background="@color/colorAccent"
                 android:text="99"
                 android:textSize="80sp"
-                android:background="@color/colorAccent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvNum1" />
 
