--- a/app/src/main/res/layout/activity_constraintlayout.xml
+++ b/app/src/main/res/layout/activity_constraintlayout.xml
@@ -12,6 +12,63 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:layout_height="600dp">
+
+
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/image"
+                android:src="@mipmap/ic_launcher_round" />
+
+
+            <ImageView android:layout_width="80dp" android:layout_height="80dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/image2"
+                android:src="@drawable/sun" app:layout_constraintHorizontal_bias="0.8"
+                app:layout_constraintVertical_bias="0.299"/>
+
+
+            <ImageView android:layout_width="80dp" android:layout_height="80dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/image3"
+                android:src="@drawable/wechat" app:layout_constraintHorizontal_bias="0.2"
+                app:layout_constraintVertical_bias="0.299"/>
+
+
+            <ImageView android:layout_width="80dp" android:layout_height="80dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/image4"
+                android:src="@drawable/ic_favorite_black_24dp" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintVertical_bias="0.3"/>
+
+            <com.mao.jetpack.utils.CircularRevealHelper
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:constraint_referenced_ids="image,image2,image3,image4"
+                tools:ignore="MissingConstraints" />
+
+
+
+
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
 
