--- a/app/src/main/res/layout/activity_nv.xml
+++ b/app/src/main/res/layout/activity_nv.xml
@@ -7,8 +7,7 @@
 
 
     <!--
-
-    app:defaultNavHost="true"  拦截系统的back键
+        app:defaultNavHost="true"  拦截系统的back键
     -->
 
     <androidx.fragment.app.FragmentContainerView
@@ -21,5 +20,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/nv_navigation" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:itemTextColor="#ff0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nv_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
