--- a/app/src/main/res/layout/activity_constraintlayout.xml
+++ b/app/src/main/res/layout/activity_constraintlayout.xml
@@ -10,6 +10,46 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <!--
+             图片跟随 文本动
+            -->
+
+            <TextView
+                android:id="@+id/tvContent1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                app:layout_goneMarginEnd="0dp"
+                android:background="@color/colorAccent"
+                android:text="图片跟随文文本跟随跟随个归属ok"
+                android:textColor="@android:color/white"
+                android:textSize="28sp"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintEnd_toEndOf="@+id/avatar2"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/avatar2"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/tvContent1"
+                app:layout_constraintTop_toTopOf="@+id/tvContent1" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <!--
            用约束替换布局
            -->
@@ -790,46 +830,6 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
-
-            <!--
-
-             图片跟随 文本动
-
-            -->
-
-            <TextView
-                android:id="@+id/tvContent1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="60dp"
-                android:background="@color/colorAccent"
-                android:text="图片跟随文本动跟"
-                android:textColor="@android:color/white"
-                android:textSize="28sp"
-                app:layout_constrainedWidth="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/avatar2"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@mipmap/ic_launcher"
-                app:layout_constraintStart_toEndOf="@+id/tvContent1"
-                app:layout_constraintTop_toTopOf="@+id/tvContent1" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <!--
@@ -868,7 +868,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="30dp"
                 android:background="@color/colorAccent"
-                android:text="文本文本文本文本文文文本文文"
+                android:text="bias  0.0 ~1.0 使用需要对控件： 有左右的约束才可以"
                 android:textColor="@android:color/white"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -957,7 +957,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:background="@color/colorAccent"
-                android:text="文本本文本文本文本本文本文本文本本文本文本"
+                android:text="不让显示的文本超出约束的宽 layout_constrainedWidth = true "
                 android:textColor="@android:color/white"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintEnd_toEndOf="@+id/avatarm"
