约束布局 -- 布局替换 和 过度动画

--- a/app/src/main/res/layout/activity_motionlayout.xml
+++ b/app/src/main/res/layout/activity_motionlayout.xml
@@ -1,32 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <androidx.constraintlayout.helper.widget.Flow
+        android:id="@+id/flow"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        app:constraint_referenced_ids="tvObjectAn1,tvObjectAn2,tvM1,tvM2,tvM3"
+        app:flow_horizontalGap="16dp"
+        app:flow_verticalGap="16dp"
+        app:flow_wrapMode="chain"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvObjectAn1"
+        style="@style/text_style"
+        android:text="ObjectAn1" />
+
+    <TextView
+        android:id="@+id/tvObjectAn2"
+        style="@style/text_style"
+        android:text="ObjectAn2" />
+
+    <TextView
+        android:id="@+id/tvM1"
+        style="@style/text_style"
+        android:text="motionlayout1" />
 
 
-        <FrameLayout
-            android:id="@+id/flRoot"
-            android:layout_width="match_parent"
-            android:layout_height="100dp">
+    <TextView
+        android:id="@+id/tvM2"
+        style="@style/text_style"
+        android:text="motionlayout2" />
 
-            <ImageView
-                android:id="@+id/heart"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="start"
-                android:contentDescription="@null"
-                android:onClick="onClick"
-                android:src="@drawable/ic_heart_24dp" />
-
-        </FrameLayout>
+    <TextView
+        android:id="@+id/tvM3"
+        style="@style/text_style"
+        android:text="motionlayout3" />
 
 
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
